# shusei

./: .gitignore  Cargo.toml  Dioxus.toml  build.rs  opencode.json  package-lock.json  pdfium.dll.lib
.cargo/: config.toml
.gsd/: DECISIONS.md  PROJECT.md
.gsd/milestones/M001/: M001-RESEARCH.md  M001-ROADMAP.md  M001-SUMMARY.md
.gsd/milestones/M001/slices/S01/: S01-PLAN.md  S01-RESEARCH.md  S01-SUMMARY.md  S01-UAT.md
.gsd/milestones/M001/slices/S02/: S02-PLAN.md  S02-SUMMARY.md  S02-UAT.md
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json  oc_config.json
.planning/backups/: 20260311054418-oc_config.json  20260311073552-oc_config.json  20260313113638-oc_config.json  20260313154248-oc_config.json  20260313161533-oc_config.json  20260313161911-oc_config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/debug/: crt-linking-conflict.md  dx-build-android-release-failure.md  dx-serve-target-triple.md
.planning/debug/resolved/: missing-load-demo-pdf-android.md
.planning/phases/01-core-infrastructure/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md  01-VALIDATION.md  01-VERIFICATION.md
.planning/phases/02-paper-book-capture/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-CONTEXT.md  02-PHASE-SUMMARY.md
.planning/phases/03-pdf-support/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-04-PLAN.md  03-04-SUMMARY.md  03-04b-PLAN.md  03-04b-SUMMARY.md  03-05-PLAN.md  03-05-SUMMARY.md  03-06-PLAN.md  03-06-SUMMARY.md  03-07-PLAN.md  03-07-SUMMARY.md  03-CONTEXT.md  03-VERIFICATION.md  deferred-items.md
.planning/phases/03.1-change-ocr-onnx-models/: 03.1-01-PLAN.md  03.1-01-SUMMARY.md  03.1-02-PLAN.md  03.1-02-SUMMARY.md  03.1-RESEARCH.md  deferred-items.md
.planning/phases/03.2-change-pdf-processing-library/: 03.2-01-PLAN.md  03.2-01-SUMMARY.md  03.2-02-PLAN.md  03.2-02-SUMMARY.md  03.2-03-PLAN.md  03.2-03-SUMMARY.md  03.2-04-PLAN.md  03.2-04-SUMMARY.md  03.2-CONTEXT.md  03.2-RESEARCH.md  03.2-VALIDATION.md  03.2-VERIFICATION.md
.planning/phases/03.3-load-pdf-function-for-human-verification-on-android-real-devices/: 03.3-01-PLAN.md  03.3-01-SUMMARY.md  03.3-CONTEXT.md  03.3-VERIFICATION.md
.planning/phases/03.4-pdf-db-pdf-human-verification/: 03.4-01-PLAN.md  03.4-CONTEXT.md
.planning/quick/001-cleanup-unnecessary-files/: 001-PLAN.md  quick-001-SUMMARY.md
.planning/quick/002-debug-dx-serve-android/: 002-PLAN.md  002-SUMMARY.md
.planning/quick/003-fix-android-linker-path/: 003-PLAN.md  003-SUMMARY.md
.planning/quick/004-add-pdf-test-assets/: 004-PLAN.md  004-SUMMARY.md
.planning/quick/006-add-load-demo-pdf-button-for-desktop/: 006-PLAN.md  006-SUMMARY.md
.planning/quick/10-fix-pdf-import-on-mobile-currently-shows/: 10-PLAN.md  10-SUMMARY.md
.planning/quick/9-clean-up-garbage-data-generated-during-d/: 9-PLAN.md  9-SUMMARY.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
assets/ocr/: README.md
assets/ocr/models/: README.md
docs/: android-setup.md  progress.md  shusei-implementation-plan.md  shusei-mvp-v2.3-review.md
patches/esaxx-rs/: Cargo.toml  README.md  README.tpl  build.rs
patches/esaxx-rs/benches/: bench_suffix.rs
patches/esaxx-rs/examples/: esaxx.rs
patches/esaxx-rs/src/: esa.hxx  esa.rs  esaxx.cpp  lib.rs  sais.hxx  sais.rs  types.rs
plans/: progress.md
platform/android/: AndroidManifest.xml
src/: app.rs  lib.rs  main.rs
src/core/: db.rs  error.rs  mod.rs  models.rs  pdf.rs  state.rs  storage.rs  tract_utils.rs  vocab.rs
src/core/ai/: engine.rs  mod.rs
src/core/ocr/: engine.rs  engine_tract.rs  markdown.rs  mod.rs  postprocess.rs  preprocess.rs
src/core/stt/: decoder.rs  engine.rs  engine_tract.rs  mel_spectrogram.rs  mod.rs  tokenizer.rs
src/platform/: android.rs  ios.rs  mod.rs
src/ui/: add_book.rs  camera.rs  components.rs  library.rs  mod.rs  notes.rs  reader.rs  vocab.rs
tests/: large_pdf_test.md  large_pdf_test.rs  moonshine_tract_test.rs  ndlocr_tract_test.rs
(+61 files in other folders)
